<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.openmrs.maven.parents</groupId>
        <artifactId>maven-parent-openmrs-module</artifactId>
        <version>1.1.1</version>
    </parent>

	<groupId>org.openmrs.module</groupId>
	<artifactId>mdrtb</artifactId>
	<version>1.4.2</version>
	<packaging>pom</packaging>
	<name>MDRTB</name>
	<description>MDRTB Module</description>

	<url>https://wiki.openmrs.org/x/FQ4z</url>

	<scm>
		<connection>scm:git:git@github.com:openmrs/openmrs-module-mdrtb.git</connection>
		<developerConnection>scm:git:git@github.com:openmrs/openmrs-module-mdrtb.git</developerConnection>
		<url>https://github.com/openmrs/openmrs-module-mdrtb/</url>
	</scm>

	<modules>
		<module>api</module>
		<module>omod</module>
<!--	  	<module>test</module>-->
  </modules>
	
	<properties>
		<openMRSVersion>2.4.0</openMRSVersion>
		<openmrs.addresshierarchy-api.version>2.21.0</openmrs.addresshierarchy-api.version>
		<openmrs.calculation.version>2.0.0</openmrs.calculation.version>
		<openmrs.htmlwidgets.version>2.0.1</openmrs.htmlwidgets.version>
		<openmrs.legacyui.version>2.0.0</openmrs.legacyui.version>
		<openmrs.logic.version>0.5</openmrs.logic.version>
		<openmrs.reporting.version>2.0.0</openmrs.reporting.version>
		<openmrs.reportingrest.version>1.16.0</openmrs.reportingrest.version>
		<openmrs.reportingcompatibility.version>2.10.0</openmrs.reportingcompatibility.version>
		<openmrs.xstream-api.version>0.3.0</openmrs.xstream-api.version>
		<openmrs.wsrest.version>2.51.0</openmrs.wsrest.version>
		
		<groovy.version>2.4.21</groovy.version>
		<gson.version>2.8.9</gson.version>
		<javax.servlet.version>3.1.0</javax.servlet.version>
		<poi.version>4.1.1</poi.version>
		<xmlworker.version>5.5.4</xmlworker.version>
		<junit.version>4.13.2</junit.version>
		<mockito.version>2.23.4</mockito.version>
		<powermock.version>2.0.9</powermock.version>
		<!-- <jodatime.version>2.10.14</jodatime.version> -->
		
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<repositories>
		<repository>
			<id>openmrs-artifactory</id>
			<url>https://openmrs.jfrog.io/artifactory/public/</url>
		</repository>
		<repository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>https://mavenrepo.openmrs.org/public</url>
		</repository>
		<repository>
			<id>central</id>
			<name>Maven Repository Switchboard</name>
			<layout>default</layout>
			<url>https://repo1.maven.org/maven2</url>
		</repository>
	</repositories>
	
	<pluginRepositories>
		<pluginRepository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>https://mavenrepo.openmrs.org/public</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
	
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.openmrs.api</groupId>
				<artifactId>openmrs-api</artifactId>
				<version>${openMRSVersion}</version>
				<type>jar</type>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.api</groupId>
				<artifactId>openmrs-api</artifactId>
				<version>${openMRSVersion}</version>
				<type>test-jar</type>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.web</groupId>
				<artifactId>openmrs-web</artifactId>
				<version>${openMRSVersion}</version>
				<type>jar</type>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.web</groupId>
				<artifactId>openmrs-web</artifactId>
				<version>${openMRSVersion}</version>
				<type>test-jar</type>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.test</groupId>
				<artifactId>openmrs-test</artifactId>
				<version>${openMRSVersion}</version>
				<type>pom</type>
				<scope>test</scope>
			</dependency>
		</dependencies>

	</dependencyManagement>
	
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-junit4</artifactId>
			<version>${powermock.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
		 	<groupId>org.openmrs.module</groupId>
		  	<artifactId>calculation-api</artifactId>
		  	<version>${openmrs.calculation.version}</version>
		  	<scope>provided</scope>
		</dependency>
		<dependency>
		 	<groupId>org.openmrs.module</groupId>
		  	<artifactId>htmlwidgets-api</artifactId>
		  	<version>${openmrs.htmlwidgets.version}</version>
		  	<scope>provided</scope>
		</dependency>
		<dependency>
		 	<groupId>org.openmrs.module</groupId>
		  	<artifactId>htmlwidgets-omod</artifactId>
		  	<version>${openmrs.htmlwidgets.version}</version>
		  	<scope>provided</scope>
		</dependency>
		<dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>legacyui-omod</artifactId>
            <version>${openmrs.legacyui.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>reporting-api</artifactId>
            <version>${openmrs.reporting.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>reportingcompatibility-api</artifactId>
            <version>${openmrs.reportingcompatibility.version}</version>
            <scope>provided</scope>
        </dependency>
		<dependency>
			<groupId>org.openmrs.module</groupId>
			<artifactId>serialization.xstream-api</artifactId>
			<version>${openmrs.xstream-api.version}</version>
			<scope>provided</scope>
		</dependency>
        <!-- TODO: I'm not quite sure why this is now needed, but compilation was failing without it -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>${javax.servlet.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
        	<groupId>com.itextpdf.tool</groupId>
        	<artifactId>xmlworker</artifactId>
        	<version>${xmlworker.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>${poi.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>7.5</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
    
    <build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.15.0</version>
					<configuration>
						<release>11</release>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.2</version>
					<configuration>
						<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED --add-opens java.desktop/java.awt.font=ALL-UNNAMED</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>net.revelc.code.formatter</groupId>
					<artifactId>formatter-maven-plugin</artifactId>
					<version>2.23.0</version>

					<configuration>
						<encoding>UTF-8</encoding>
						<lineEnding>KEEP</lineEnding>
						<directories>
							<directory>src</directory>
						</directories>
						<includes>
							<include>**/*.java</include>
						</includes>
						<configFile>OpenMRSFormatter.xml</configFile>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	    <plugins>
		    <plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-compiler-plugin</artifactId>
			    <configuration>
				    <source>8</source>
				    <target>8</target>
			    </configuration>
		    </plugin>
	    </plugins>
	</build>

	<!-- Different profiles for different version of Openmrs -->
    <profiles>
        <profile>
            <id>2.8</id>
            <properties>
                <openMRSVersion>2.8.0</openMRSVersion>
                <openMRSMinorVersion>2.8</openMRSMinorVersion>
            </properties>
        </profile>
    </profiles>
</project>
